use a fresh copy of monitoring-config.xml for each test